<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.europeana.metis</groupId>
  <artifactId>metis-normalization</artifactId>
  <version>14-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.metis-schema>10-SNAPSHOT</version.metis-schema>
    <version.mockito.core>4.3.1</version.mockito.core>
    <version.log4j>2.23.0</version.log4j>
    <version.ibm.icu4j>69.1</version.ibm.icu4j>
    <version.commons.lang3>3.12.0</version.commons.lang3>
    <version.commons.io>2.9.0</version.commons.io>
    <version.junit>5.7.2</version.junit>
    <version.jackson>2.16.1</version.jackson>
    <version.jena.iri>4.7.0</version.jena.iri>
    <version.jena.core>4.7.0</version.jena.core>
    <version.jericho-html>3.4</version.jericho-html>
    <version.maven.compiler.plugin>3.8.1</version.maven.compiler.plugin>
    <version.surefire.plugin>2.22.1</version.surefire.plugin>
    <version.maven.release.plugin>2.5.3</version.maven.release.plugin>
  </properties>

  <dependencies>
    <dependency>
      <groupId>eu.europeana.metis</groupId>
      <artifactId>metis-schema</artifactId>
      <version>${version.metis-schema}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${version.mockito.core}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j2-impl</artifactId>
      <version>${version.log4j}</version>
    </dependency>
    <dependency>
      <groupId>com.ibm.icu</groupId>
      <artifactId>icu4j</artifactId>
      <version>${version.ibm.icu4j}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${version.commons.lang3}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${version.commons.io}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${version.junit}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${version.junit}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${version.junit}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${version.jackson}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${version.jackson}</version>
    </dependency>
    <dependency>
      <groupId>net.htmlparser.jericho</groupId>
      <artifactId>jericho-html</artifactId>
      <version>${version.jericho-html}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-iri</artifactId>
      <version>${version.jena.iri}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-core</artifactId>
      <version>${version.jena.core}</version>
    </dependency>
  </dependencies>

  <repositories>
    <!--Release repositories-->
    <repository>
      <id>libs-release</id>
      <name>libs-release</name>
      <url>https://artifactory.eanadev.org/artifactory/libs-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>libs-snapshot</id>
      <name>libs-snapshot</name>
      <url>https://artifactory.eanadev.org/artifactory/libs-snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>artifactory.eanadev.org</id>
      <name>artifactory.eanadev.org-releases</name>
      <url>https://artifactory.eanadev.org/artifactory/libs-release-local</url>
    </repository>
    <snapshotRepository>
      <id>artifactory.eanadev.org</id>
      <name>artifactory.eanadev.org-snapshots</name>
      <url>https://artifactory.eanadev.org/artifactory/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>${version.maven.release.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${version.maven.compiler.plugin}</version>
          <configuration>
            <release>21</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.surefire.plugin}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${version.surefire.plugin}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>${version.maven.release.plugin}</version>
      </plugin>
    </plugins>
  </build>
</project>
